--- a/devjobsdaily/src/App.css
+++ b/devjobsdaily/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .App-logo {
@@ -7,11 +9,7 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+
 .main {
   background-color: #282c34;
   min-height: 70vh;
@@ -34,21 +32,32 @@
 }
 
 .bx{
-  height:fit-content;
-  width: fit-content;
+
   padding: 1%;
   border-radius: 8px;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
 }
+
 .bx1{
   background-color: aqua;
+  height: 20vh;
+  width: 20vh;
+  display: flex;
+  font-size: 60%;
+
 }
 .bx2{
   background-color: red;
+  height: 50vh;
+  width: 50vh;
 }
 
 .bx3{
   background-color: green;
+  height: 20vh;
+  width: 20vh;
+  display: flex;
+  font-size: 60%;
+}
+.navh1{
+  font-size: 200%;
 }
