--- a/devjobsdaily/src/App.css
+++ b/devjobsdaily/src/App.css
@@ -30,7 +30,30 @@
 }
 
 .navbar{
-  background-color: yellow;
+  background-color: #F5C232;
+}
+
+.bm-burger-button {
+  position: fixed;
+  width: 36px;
+  height: 30px;
+  left: 36px;
+  top: 36px;
+}
+
+/* Color/shape of burger icon bars */
+.bm-burger-bars {
+  background: #373a47;
+}
+
+/* Color/shape of burger icon bars on hover*/
+.bm-burger-bars-hover {
+  background: #18a1dc;
+}
+
+.navbutton {
+  color: #f6f6eb;
+  background-color: #18a1dc;
 }
 
 .bx{
