--- a/devjobsdaily/src/App.css
+++ b/devjobsdaily/src/App.css
@@ -70,3 +70,40 @@
   height: 100%;
   border-radius: 8px;
 }
+
+
+@media only screen and (max-width: 1380px) {
+  .App {
+    background-color: lightblue;
+    align-items: center;
+
+  }
+
+  .main{
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  .bx1{
+    grid-row:2/3;
+    grid-column: 1/2;
+    padding:15px;
+
+
+  }
+  .bx2{
+    grid-row: 1/2;
+    grid-column: 1/4;
+    width: fit-content;
+    padding:15px;
+  }
+  .bx3{
+    grid-row:2/3;
+    grid-column: 3/4;
+    width:fit-content;
+    padding:15px;
+
+    
+  }
+}
+
