--- a/devjobsdaily/src/App.css
+++ b/devjobsdaily/src/App.css
@@ -2,11 +2,11 @@
   text-align: center;
   display: flex;
   flex-direction: column;
-  background-color: #86a2b5;
+  background-color: #3A7CA5;
 }
 
 .main {
-  background-color: #86a2b5;
+  background-color:#3A7CA5;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -22,38 +22,49 @@
 }
 
 .navbar{
-  background-color: #86a2b5
+  background-color: #3A7CA5
   ;
   margin-top: 0%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.bx{
 
+
+.bx{
+  background-color: #D9DCD6;
   padding: 1%;
   border-radius: 8px;
 }
 
 .bx1{
-  background-color: #f9e749;
+  background-color: #D9DCD6;
   height: 20vh;
   width: fit-content;
   display: flex;
 }
 .bx2{
-  background-color: #18a1dc
+  background-color: #D9DCD6
   ;
   height: 50vh;
   width: fit-content;
 }
 
 .bx3{
-  background-color: #d64d49;
+  background-color: #D9DCD6;
   height: 20vh;
   width: fit-content;
   display: flex;
 }
+.bx4{
+  width: fit-content;
+  display: flex;
+}
+
 .navh1{
   font-size: 200%;
+  width: 100%;
 }
 
 .chart{
@@ -72,9 +83,9 @@
 }
 
 
-@media only screen and (max-width: 1380px) {
+@media only screen and (max-width: 1400px) {
   .App {
-    background-color: lightblue;
+    background-color: #3A7CA5;
     align-items: center;
 
   }
@@ -94,9 +105,12 @@
   .bx2{
     grid-row: 1/2;
     grid-column: 1/4;
-    width: fit-content;
+    width: 100%;
     padding:15px;
   }
+
+  
+
   .bx3{
     grid-row:2/3;
     grid-column: 3/4;
@@ -104,6 +118,10 @@
     padding:15px;
 
     
+  }
+
+  .chart{
+    width: 100%;
   }
 }
 
