--- a/devjobsdaily/src/App.css
+++ b/devjobsdaily/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:regular,bold,italic&subset=latin,latin-ext');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Didact+Gothic&family=Roboto:wght@100&display=swap');
 
 .App {
   text-align: center;
@@ -17,6 +17,7 @@
   justify-content: space-around;
   font-size: calc(10px + 2vmin);
   padding: 5%;
+  padding-top: 10px;
 
 }
 
@@ -27,10 +28,12 @@
 .navbar{
   background-color: #3A7CA5
   ;
-  margin-top: 0%;
   display: flex;
   justify-content: center;
   align-items: center;
+  size: 50pt;
+  margin-top: 20px;
+  margin-bottom: 10px;
 }
 
 
@@ -50,16 +53,40 @@
 .bx2{
   background-color: #D9DCD6
   ;
-  height: 50vh;
+  height: fit-content;
   width: fit-content;
+  padding:2%;
+ 
+}
+
+.drops{
+  display: flex;
+  justify-content: space-evenly;
+  margin: 10px;
+  margin-bottom:30px ;
 }
 
 .bx3{
   background-color: #D9DCD6;
-  height: 20vh;
-  width: fit-content;
-  display: flex;
+  height: fit-content;
+  
 }
+
+.topmark{
+  margin-bottom: 2px;
+  margin-top: 0%;
+}
+
+.mark{
+  margin-top: 5px;
+}
+
+.marks{
+  margin-top: 3px;
+  margin-bottom: 0%;
+
+}
+
 .bx4{
   width: 60%;
   display: flex;
@@ -101,18 +128,26 @@
     display: grid;
     grid-template-rows: 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr;
+    place-items: start;
+
+  }
+
+  .navbar{
+    display: block;
   }
   .bx1{
     grid-row:2/3;
     grid-column: 1/2;
     padding:15px;
-
+    width: 90%;
+    margin-top: 10%;
+    
 
   }
   .bx2{
     grid-row: 1/2;
     grid-column: 1/4;
-    width: 100%;
+    width: 96%;
     padding:15px;
   }
 
@@ -121,10 +156,14 @@
   .bx3{
     grid-row:2/3;
     grid-column: 3/4;
-    width:fit-content;
     padding:15px;
-
+    width: 90%;
+    margin-top: 10%;
     
+  }
+  .bx4{
+    width: fit-content;
+    display: flex;
   }
 
   .chart{
