--- a/server/src/App.css
+++ b/server/src/App.css
@@ -36,3 +36,27 @@
     transform: rotate(360deg);
   }
 }
+
+body {
+  text-align: center;
+  background-color: #3A7CA5;
+}
+
+.searchBar {
+  display: flex;
+  justify-content: space-evenly;
+  background-color: #D9DCD6;
+  border-radius: 8px;
+  width: 60%;
+  margin: 30px auto auto auto;
+  padding: 1%;
+}
+
+#root > div > form > label > input {
+  margin-left: 3px;
+}
+
+#root > div > form > label > select {
+  text-align: center;
+  margin-left: 3px;
+}
