--- a/server/src/App.css
+++ b/server/src/App.css
@@ -18,7 +18,7 @@
   border-radius: 5px;
 }
 
-.searchForm button[type="submit"] {
+.searchForm button {
   width: 100%;
   padding: 10px;
   margin-top: 10px;
@@ -30,7 +30,7 @@
   cursor: pointer;
 }
 
-.searchForm button[type="submit"]:hover {
+.searchForm button:hover {
   background-color: #1e88e5;
 }
 
@@ -59,27 +59,39 @@
   font-size: 16px;
 }
 
-.sign-up-form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 20px;
+.form-container {
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .form-field {
   margin-bottom: 10px;
 }
 
+
+.form-title {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
 label {
   display: block;
   font-weight: bold;
+  margin-bottom: 5px;
 }
 
 input {
-  padding: 8px;
+  padding: 10px;
   border: 1px solid #ccc;
   border-radius: 4px;
   font-size: 16px;
+  width: 100%;
+  max-width: 300px;
 }
 
 .submit-button {
@@ -90,8 +102,113 @@ input {
   border-radius: 4px;
   font-size: 16px;
   cursor: pointer;
+  margin-top: 20px;
 }
 
 .submit-button:hover {
   background-color: #0069d9;
 }
+
+.saved-search-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  display: table;
+  width: 100%;
+  table-layout: fixed;
+}
+
+.saved-search-list li {
+  display: table-row;
+  border-bottom: 1px solid #ccc;
+}
+
+.saved-search-list li:last-child {
+  border-bottom: none;
+}
+
+.saved-search-list-item {
+  display: table-cell;
+  padding: 10px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+
+
+.saved-search-list button:hover {
+  background-color: #0069d9;
+}
+
+.edit-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 10px;
+  margin-top: 20px;
+}
+
+.edit-form label {
+  margin-bottom: 5px;
+  font-weight: bold;
+  font-size: 16px;
+}
+
+.edit-form input[type="text"] {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+  margin-bottom: 10px;
+  width: 100%;
+  max-width: 300px;
+}
+
+.edit-form button[type="submit"] {
+  background-color: #007bff;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.edit-form button[type="submit"]:hover {
+  background-color: #0069d9;
+}
+
+.edit-form button[type="button"] {
+  background-color: #ccc;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
+  margin-right: 10px;
+}
+
+.edit-form button[type="button"]:hover {
+  background-color: #999;
+}
+
+.searchForm-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px auto;
+}
+
+.saved-searches-container {
+  margin-top: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 20px;
+}
+
