--- a/server/src/App.css
+++ b/server/src/App.css
@@ -212,3 +212,39 @@ input {
   padding: 20px;
 }
 
+/* .saved-search-buttons {
+  display: table-cell;
+  padding: 10px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+} */
+
+/* .saved-search-buttons button{
+  width: 100%;
+  padding: 10px;
+  margin-top: 10px;
+  background-color: #2196f3;
+  color: #fff;
+  font-size: 16px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.saved-search-buttons button:hover {
+  background-color: #1e88e5;
+} */
+
+.saved-search-list li button {
+  width: 80px;
+  padding: 5px;
+  margin-right: 10px;
+  background-color: #2196f3;
+  color: #fff;
+  font-size: 16px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
