--- a/server/src/App.css
+++ b/server/src/App.css
@@ -42,13 +42,18 @@ body {
   background-color: #3A7CA5;
 }
 
+#header {
+  margin-top: 80px;
+  font-size: 40px;
+}
+
 .searchBar {
   display: flex;
   justify-content: space-evenly;
   background-color: #D9DCD6;
   border-radius: 8px;
   width: 60%;
-  margin: 30px auto auto auto;
+  margin: 60px auto auto auto;
   padding: 1%;
 }
 
@@ -59,4 +64,21 @@ body {
 #root > div > form > label > select {
   text-align: center;
   margin-left: 3px;
+}
+
+#root > div > div {
+  margin-top: 50px;
+}
+
+.searchContainer {
+  margin: 60px auto;
+  display: flex;
+}
+
+.searches {
+  border-radius: 8px;
+  margin: auto;
+  padding: 1%;
+  background-color: #D9DCD6;
+  border: 1px rgb(255, 255, 255) solid
 }
